not working but fine

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,14 @@
     .player.show{display:block}
   </style>
 </head>
+<script
+  src="http://localhost:8000/static/tts-widget.v1.js?v=figma5"
+  data-base="http://localhost:8000"
+  data-voice="4RZ84U1b4WCqpu57LvIq"
+  data-theme="light"
+  data-theme-url="http://localhost:8000/static/themes/figma.css"
+  data-preview="off">
+</script>
 <body>
   <main>
     <h1>AI Listen Demo</h1>
