Player adapts to any demo page

--- a/static/demo-shell.html
+++ b/static/demo-shell.html
@@ -55,10 +55,8 @@
   </script>
 
   <main>
-    <h1>AI Listen Demo</h1>
-    <article id="demo-article">
-      <p>This is a short sample paragraph for the demo player. Click listen.</p>
-    </article>
+    <h1 id="ai-title">{{TITLE}}</h1>
+    <article id="ai-article">{{ARTICLE}}</article>
   </main>
 
   <!-- Minimal player shell (style this to match Figma) -->
