--- a/static/index.html
+++ b/static/index.html
@@ -72,6 +72,7 @@
 <script src="/static/tts-widget.v1.js?v=17"
         data-base="http://127.0.0.1:8000"
         data-voice="21m00Tcm4TlvDq8ikWAM"
+        data-doc-id="ai-listen-demo-homepage"
         data-selector="article"
         data-variant="inline"
         data-position="bottom-right"
@@ -100,6 +101,16 @@
     }
     requestAnimationFrame(tagFab);
   })();
+</script>
+
+<!-- AI Listen widget -->
+<script async
+  src="https://ai-voice-demo-theta.vercel.app/static/tts-widget.v1.js"
+  data-base="https://aivoicedemo.onrender.com"
+  data-voice="21m00Tcm4TlvDq8ikWAM"
+  data-doc-id="case-study-demo"
+  data-preset="news"
+  data-tenant="demo">
 </script>
 </body>
 </html>
