this should work

--- a/static/index.html
+++ b/static/index.html
@@ -39,17 +39,25 @@
   </main>
 
   <!-- Load mini-player FIRST so AiMini is defined -->
-  <script src="/static/mini-player.js?v=20"></script>
+  <script src="/static/mini-player.js?v=21"></script>
 
   <!-- (Optional) pro player script if you use it -->
   <script defer src="/static/pro-player.js"></script>
 
   <!-- AI Listen widget (points to your HTTPS Render API) -->
   <script async
-    src="/static/tts-widget.v1.js?v=20"
+    src="/static/tts-widget.v1.js?v=21"
     data-base="https://aivoicedemo.onrender.com"
     data-voice="21m00Tcm4TlvDq8ikWAM"
     data-tenant="demo"
     data-doc-id="case-study-demo"
     data-preset="news"
-    data-metrics="off"          <!-- disable me
+    data-metrics="off"
+    data-selector="article"
+    data-variant="inline"
+    data-position="bottom-right"
+    data-label-idle="Listen"
+    data-label-loading="Loading…"
+    data-label-pause="Pause"
+    data-label-error="Error">
+  </script>
