--- a/static/index.html
+++ b/static/index.html
@@ -39,14 +39,14 @@
   </main>
 
   <!-- Load mini-player FIRST so AiMini is defined -->
-  <script src="/static/mini-player.js?v=21"></script>
+  <script src="/static/mini-player.js?v=22"></script>
 
   <!-- (Optional) pro player script if you use it -->
   <script defer src="/static/pro-player.js"></script>
 
   <!-- AI Listen widget (points to your HTTPS Render API) -->
   <script async
-    src="/static/tts-widget.v1.js?v=21"
+    src="/static/tts-widget.v1.js?v=22"
     data-base="https://aivoicedemo.onrender.com"
     data-voice="21m00Tcm4TlvDq8ikWAM"
     data-tenant="demo"
@@ -55,9 +55,5 @@
     data-metrics="off"
     data-selector="article"
     data-variant="inline"
-    data-position="bottom-right"
-    data-label-idle="Listen"
-    data-label-loading="Loading…"
-    data-label-pause="Pause"
-    data-label-error="Error">
+    data-position="bottom-right">
   </script>
