this should work2

--- a/static/index.html
+++ b/static/index.html
@@ -38,18 +38,18 @@
     </article>
   </main>
 
-<!-- load mini first so AiMini exists -->
-  <script src="/static/mini-player.js?v=25"></script>
+  <!-- load mini first -->
+  <script src="/static/mini-player.js?v=27"></script>
 
-  <!-- load the UPDATED widget from /static (not root) -->
+  <!-- load the widget (single canonical path) -->
   <script async
-    src="/static/tts-widget.v1.js?v=25"
+    src="/static/tts-widget.v1.js?v=27"
     data-base="https://aivoicedemo.onrender.com"
     data-voice="21m00Tcm4TlvDq8ikWAM"
     data-tenant="demo"
     data-doc-id="case-study-demo"
     data-preset="news"
-    data-metrics="off"           <!-- keep off while testing -->
+    data-metrics="off"      
     data-selector="article"
     data-variant="inline"
     data-position="bottom-right">
