point scripts to /static

--- a/static/index.html
+++ b/static/index.html
@@ -72,11 +72,11 @@
     
 
 <!-- load mini first -->
-<script src="/static/mini-player.js?v=104"></script>
+<script src="/static/mini-player.js?v=106"></script>
 
 <!-- widget -->
 <script async
-  src="/static/tts-widget.v1.js?v=104"
+  src="/static/tts-widget.v1.js?v=106"
   data-base="https://aivoicedemo.onrender.com"
   data-voice="21m00Tcm4TlvDq8ikWAM"
   data-tenant="demo"
@@ -85,8 +85,4 @@
   data-metrics="off"
   data-selector="article"
   data-variant="inline"
-  data-position="bottom-right">
-</script>
-
-<!-- (optional) pro player -->
-<script src="/static/pro-player.js?v=104" defer></script>
+  data-position="bottom-right"></script>
