--- a/static/index.html
+++ b/static/index.html
@@ -78,7 +78,7 @@
     src="/tts-widget.v1.js?v=108"
     data-base="https://aivoicedemo.onrender.com"
     data-voice="21m00Tcm4TlvDq8ikWAM"
-    data-tenant="demo"
+    data-tenant="demo123"
     data-doc-id="case-study-demo"
     data-preset="news"
     data-metrics="off"
