--- a/static/index.html
+++ b/static/index.html
@@ -183,6 +183,10 @@
   
     // 2) Provide text to widget when it asks
     window._AIL_PROVIDE_TEXT = async () => current.rawText;
+
+    // Render backend
+    window.AIL_API_BASE = "https://aivoicedemo.onrender.com/";  // your Render backend
+    window.AIL_TENANT = "demo123";
   
     // 3) Load URL → extract → render → prep highlight
     $('#urlForm').addEventListener('submit', async (e) => {
