--- a/static/index.html
+++ b/static/index.html
@@ -66,10 +66,10 @@
        Attach any ElevenLabs pronunciation dictionary to the same voice you use below. -->
   <script
     src="/tts-widget.v108.js"
-    data-base="https://aivoicedemo.onrender.com"   <!-- your backend base -->
-    data-voice="21m00Tcm4TlvDq8ikWAM"             <!-- ElevenLabs voice ID you picked -->
-    data-tenant="demo123"                          <!-- optional: for your backend routing -->
-    data-selector="#demo-article">                 <!-- where to read from -->
+    data-base="https://aivoicedemo.onrender.com"
+    data-voice="21m00Tcm4TlvDq8ikWAM"           
+    data-tenant="demo123"                       
+    data-selector="#demo-article">               
   </script>
 
   <!-- (Optional) If you also ship a pronunciation dictionary file in ElevenLabs,
