--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
     <header class="article-header">
       <!-- H1 is what the mini-player shows as title -->
       <h1>Where should archaeologists dig next? The winners of this OpenAI contest can tell them.</h1>
-
+      <button id="ai-listen-btn" class="listen-btn">Listen</button>
       <!-- Optional subheading/dek (read before body with a short pause) -->
       <p class="dek">Machine learning points to dozens of likely archaeological sites hidden across the Amazon rainforest.</p>
 
@@ -53,9 +53,24 @@
     <!-- You can omit images, captions, embeds, and footnotes (the widget strips them anyway). -->
     <article id="demo-article" class="article-body">
       <!-- Replace these sample paragraphs with the NatGeo article text -->
-      <p>The Amazon basin conceals traces of ancient cities beneath dense rainforest canopies. Now, competition-winning models trained on remote-sensing data are flagging dozens of promising sites where archaeologists might dig next.</p>
-      <p>Using LiDAR, DEM rasters, and geospatial patterns from known settlements, teams combined statistical features with machine learning to surface subtle earthworks—circles, causeways, and low mounds—often invisible to the naked eye.</p>
-      <p>While Indigenous knowledge has long pointed to complex Amazonian landscapes, these predictions give field researchers a shortlist for reconnaissance, helping prioritize scarce time and resources for future expeditions.</p>
+      <p>Buried deep within millions of square miles of dense Amazon rainforest may lie tens of thousands of hidden archeological sites, where stone tools and rock paintings 
+        are testaments to civilizations that existed as far back as 13,000 years ago.</p>
+      <p>But the thick forest sprawled across nine countries and home to hundreds of Indigenous groups today, is too vast and often difficult for archeologists to physically 
+        survey for hidden sites. Increasingly, researchers are looking to newer technologies like Artificial Intelligence and machine learning for help. </p>
+      <p>That’s why two archaeologists recently collaborated with OpenAI, the company behind ChatGPT, to judge a public competition encouraging tech enthusiasts
+         to explore large troves of satellite images and remote sensor data for signs of undiscovered archeological sites.</p>
+      <p>The winning three-person team of the "OpenAI to Z Challenge," announced Thursday, found 67 distinct patches across the Amazon, each measuring about a 
+        square mile, that they think could contain historically valuable ancient sites and provide potential starting points for field exploration. 
+        The judges included Egyptologist Sarah Parcak and Mesoamerican archaeologist Chris Fisher.</p>
+      <p>The winning team, which calls itself “Black Bean,” trained deep learning models on several publicly available datasets, including remote sensing LiDAR data
+         and satellite images from Google Earth Engine and NASA’s digital elevation models, among others. The team says they then used OpenAI's GPT-4o model to learn
+          the pattern of known archeological sites in the Amazon rainforest and compare them to unexplored swaths of the Amazon, mainly in Brazil.
+           It then highlighted dozens of coordinates for future exploration.</p>
+      <p>Many of the areas they identified appeared to be clustered along bodies of water.
+        “Our results actually make sense on a common-sense level,” says Yao Zhao, a member of the winning team who is 
+        currently a software engineer at Meta, and was on a career break during the competition to learn more about AI applications. Ancient civilizations, after all, tended to flourish near accessible water sources. 
+        Being able to quickly churn through millions of square miles of geographic data within a few weeks could 
+        make it easier for archeologists to find patterns without relying on groundwork first, he adds. The first-place winners received a $250,000 cash prize and credits to use premium OpenAI products.</p>
       <!-- ...more <p>…</p> blocks as needed ... -->
     </article>
   </main>
